--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <a href="https://github.com/ccomper">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/chris-comper-07bb6a13b/">
+                <a href="https://ca.linkedin.com/in/christopher-comper-07bb6a13b?trk=people-guest_profile-result-card_result-card_full-click">
                     <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                 </a>
-                <a href="https://medium.com/@chrisdevelops90">
+                <a href="https://medium.com/@chriscomper/why-its-important-to-ask-the-right-questions-596263c4e025">
                     <i class="fa fa-medium" aria-hidden="true"></i>
                 </a>   
             </div>
@@ -68,6 +68,9 @@
                 </div>
                 <div class="about-page__biography">
                     <h4>Thanks for visiting my site!</h4>
+                    <div class="about-page__photo">
+                        <img src="assets/headshot.jpg" alt="a picture of my large head">
+                    </div>
                     <p>My name is Chris, and I'm a Front-End Web Developer based in Toronto, Canada. I love to collaborate with teams and work hard to ship something greater than what can be accomplished alone. </p>  
                     <p>I believe in a directed, continuous, focused approach to learning. I'm currently learning Node, and working hard to expand my abilities and passion to create more robust applications in React.</p>
                     <p>When I'm not coding or brushing up on new web technologies, you can find me rock climbing or spending time with my dog.</p>  
@@ -83,14 +86,14 @@
                     <img src="assets/divider.svg" alt="small circles under the header text">
                 </div>
                 <div class="skills-page__icons">
-                    <i class="devicon-html5-plain-wordmark"><p>HTML5</p></i>
-                    <i class="devicon-css3-plain-wordmark"><p>CSS3</p></i>
-                    <i class="devicon-javascript-plain"><p>JavaScript</p></i>
-                    <i class="devicon-sass-original"><p>SASS</p></i>
-                    <i class="devicon-react-original-wordmark"><p>React</p></i>
-                    <i class="devicon-git-plain-wordmark"><p>Git</p></i>
-                    <i class="devicon-jquery-plain-wordmark"><p>jQuery</p></i>
-                    <i class="devicon-gulp-plain"><p>Gulp</p></i>
+                    <i class="devicon-html5-plain colored"><p>HTML5</p></i>
+                    <i class="devicon-css3-plain colored"><p>CSS3</p></i>
+                    <i class="devicon-javascript-plain colored"><p>JavaScript</p></i>
+                    <i class="devicon-sass-original colored"><p>SASS</p></i>
+                    <i class="devicon-react-original colored"><p>React</p></i>
+                    <i class="devicon-git-plain colored"><p>Git</p></i>
+                    <i class="devicon-jquery-plain colored"><p>jQuery</p></i>
+                    <i class="devicon-gulp-plain colored"><p>Gulp</p></i>
                 </div>
             </div>    
         </section>
@@ -113,8 +116,8 @@
                             <h4>API Project: Disaster Tracker</h4>
                             <p>Built using the EONET API and jQuery from the team at NASA. Tracks natural disasters worldwide live.</p>   
                             <h5>jQuery - AJAX - CSS3 - HTML5</h5>
-                            <a href="http://www.disaster-tracker.com" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
-                            <a href="www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
+                            <a href="http://www.disastertracker.net" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
+                            <a href="http://www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
                         </div>   
                     </div>
                     <!-- second work example -->
@@ -126,8 +129,8 @@
                             <h4>React/Firebase Project: PawPrints</h4>
                             <p>Built using React and Firebase. Features authentication, profile creation, routing, and public/private areas.</p>   
                             <h5>React - Firebase - SASS - Gulp</h5>
-                            <a href="www.followthepawprints.com" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
-                            <a href="www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
+                            <a href="https://pawprints-2becd.firebaseapp.com/" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
+                            <a href="https://github.com/ccomper/PawPrints" target="_blank" class="works-page__exampleButton">GITHUB</a> 
                         </div> 
                     </div>
                     <!-- third work example -->
@@ -139,8 +142,8 @@
                             <h4>jQuery Project: Prophesize-me</h4>
                             <p>Built using jQuery, CSS3 and HTML5. Allows users to select several choices and randomly generate thousands of different combinations. Includes theme songs!</p>   
                             <h5>jQuery - CSS3 - HTML5</h5>
-                            <a href="www.google.ca" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
-                            <a href="www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
+                            <a href="https://ccomper.github.io/prophesize-me/" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
+                            <a href="https://github.com/ccomper/prophesize-me" target="_blank" class="works-page__exampleButton">GITHUB</a> 
                         </div>   
                     </div>
                     <!-- fourth work example -->
@@ -152,8 +155,8 @@
                             <h4>PSD Conversion: Over</h4>
                             <p>PSD template conversion exemplifying responsive design.</p>   
                             <h5>HTML5, CSS3</h5>
-                            <a href="www.google.ca" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
-                            <a href="www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
+                            <a href="OVER PSD/index.html" target="_blank" class="works-page__exampleButton">VIEW LIVE</a>
+                            <a href="http://www.github.com" target="_blank" class="works-page__exampleButton">GITHUB</a> 
                         </div>   
                     </div>
                 </div>
@@ -176,7 +179,7 @@
                     <form method="POST" action="http://www.focuspocus.io/magic/c07a0b0b8c746da776ef673f447f59c6">
                         <input type="text" placeholder="name">
                         <input type="text" placeholder="email address">
-                        <textarea name="textarea" placeholder="your message" ></textarea>
+                        <textarea name="textarea" placeholder="your message" ></textarea>       
                         <input class="form-submit__button" type="submit">
                     </form>
                 </div>
