--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="contact-page__form">
                     <h3>Enjoy my work? Hire me!</h3>
-                    <form method="POST" action="http://www.focuspocus.io/magic/c07a0b0b8c746da776ef673f447f59c6">
+                    <form method="POST" action="https://www.focuspocus.io/magic/c07a0b0b8c746da776ef673f447f59c6">
                         <input type="text" placeholder="name">
                         <input type="text" placeholder="email address">
                         <textarea name="textarea" placeholder="your message" ></textarea>       
